# minish-cap-auto-splitter

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yml
src/: lib.rs
