[package]
name = "minish-cap-auto-splitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asr = { git = "https://github.com/LiveSplit/asr", features = [
    "derive", # Defining your own settings structs, converting endianness, and binding to .NET classes.
    "gba", # Accessing Game Boy Advance emulators.
    "integer-vars",
] }

# Bytemuck can be used to define structs that are being read from the game's process.
bytemuck = { version = "1", features = ["derive", "min_const_generics"] }
bitflags = "2.4.1"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true

[profile.release.build-override]
opt-level = 0
